[package]
name = "rpc"
version = "0.0.1"
authors = [ "Hyunsik Choi <hyunsik.choi at gmail dot com>" ]

[lib]
name = "rpc"
path = "./lib.rs"

[dependencies]
bytes = "0.2.11"
mio = "0.4.3"
log = "0.3.1"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"

[dependencies.proto]
path = "../proto"